# work-tokens

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: mod.rs  rpc.rs
src/blockchain/: block.rs  ledger.rs  merkle_tree.rs  mod.rs  transaction.rs
src/config/: mod.rs  settings.rs  settings.toml
src/consensus/: mod.rs  proof_of_work.rs  validator.rs
src/crypto/: hash.rs  keys.rs  mod.rs  signatures.rs
src/network/: message.rs  mod.rs  p2p.rs
src/storage/: db.rs  mod.rs
src/token/: expiration.rs  issuance.rs  management.rs  mod.rs
src/utils/: mod.rs  serialization.rs
src/wallet/: mod.rs  wallet.rs
tests/: blockchain_tests.rs
